# Vulkan-API

./: C++.gitignore  CMakeLists.txt  README.md  build.sh
Notes/: Installation.cpp  Libcheckmain.cpp  Vulkan.cpp
include/: deviceManager.h  queueManager.h  swapChainManager.h  utilities.h  vulkanRenderer.h  vulkanUtils.h  vulkanValidation.h  window.h
src/: deviceManager.cpp  main.cpp  queueManager.cpp  surfaceManager.cpp  swapChainManager.cpp  vulkanRenderer.cpp  vulkanRenderer.h  vulkanUtils.cpp  vulkanValidation.cpp  window.cpp
src/Assets/Models/sword/: dwarvensword.blend.blend
src/Engine/: assetImportManager.cpp  assetImportManager.h  cameraManager.cpp  cameraManager.h  deviceManager.cpp  deviceManager.h  drawManager.cpp  drawManager.h  inputManager.cpp  inputManager.h  lightManager.cpp  lightManager.h  material.cpp  material.h  mesh.cpp  mesh.h  meshDrawer.cpp  meshDrawer.h  meshManager.cpp  meshManager.h  queueManager.cpp  queueManager.h  scene.cpp  scene.h  scenes.cpp  scenes.h  surfaceManager.h  swapChainManager.cpp  swapChainManager.h  textureManager.cpp  textureManager.h  vulkanMeshDrawer.cpp  vulkanMeshDrawer.h  vulkanMeshHandler.cpp  vulkanMeshHandler.h  vulkanMeshManager.h  vulkanRenderer.cpp  vulkanRenderer.h  vulkanUtils.cpp  vulkanUtils.h  (+2 more)
src/Pipeline/: depthStencilManager.cpp  depthStencilManager.h  vulkanCommandBuffer.cpp  vulkanCommandBuffer.h  vulkanDepthStencilManager.cpp  vulkanDepthStencilManager.h  vulkanFrameBuffer.cpp  vulkanFrameBuffer.h  vulkanGraphicsPipeline.cpp  vulkanGraphicsPipeline.h  vulkanRenderpass.cpp  vulkanRenderpass.h  vulkanShaderPaths.h  vulkanShadowMapManager.cpp  vulkanShadowMapManager.h  vulkanSyncHandler.cpp  vulkanSyncHandler.h
src/Pipeline/PipelineUnits/: pipelineColorBlendState.cpp  pipelineColorBlendState.h  pipelineDepthStencilState.cpp  pipelineDepthStencilState.h  pipelineDynamicState.cpp  pipelineDynamicState.h  pipelineInputAssemblyState.cpp  pipelineInputAssemblyState.h  pipelineLayoutState.cpp  pipelineLayoutState.h  pipelineMultiSampleState.cpp  pipelineMultiSampleState.h  pipelineRasterizerState.cpp  pipelineRasterizerState.h  pipelineShaderModule.cpp  pipelineShaderModule.h  pipelineVertexInputState.cpp  pipelineVertexInputState.h  pipelineViewportState.cpp  pipelineViewportState.h
src/Renderer/: vulkanDepthManager.cpp  vulkanDepthManager.h  vulkanGraphicsInitializer.cpp  vulkanGraphicsInitializer.h  vulkanMeshDrawer.cpp  vulkanMeshDrawer.h  vulkanMeshHandler.cpp  vulkanMeshHandler.h  vulkanMeshManager.cpp
src/Shaders/: colored_moving_shader.frag  colored_moving_shader.vert  colored_shader.frag  colored_shader.vert  compile_shaders.sh  shader.frag  shader.vert  shadow.vert  skybox.frag  skybox.vert  textured_shader.frag  textured_shader.vert
src/Shaders/spv/: colored_moving_shader.frag.spv  colored_moving_shader.vert.spv  colored_shader.frag.spv  colored_shader.vert.spv  shader.frag.spv  shader.vert.spv  shadow.vert.spv  skybox.frag.spv  skybox.vert.spv  textured_shader.frag.spv  textured_shader.vert.spv
